bug fixed, scrollbars

--- a/src/assets/scss/_inputs.scss
+++ b/src/assets/scss/_inputs.scss
@@ -3,6 +3,10 @@
 /** INPUT **/
 .form-field-container {
     margin: 20px 0;
+
+    @media (max-width: $break-sm) {
+        margin: 10px 0;
+    }
 }
 
 .form-field {
@@ -44,7 +48,7 @@
         outline: none;
         width: 97%;
         z-index: 1;
-        background-color: transparent;
+        background-color: transparent !important;
         padding: 11px 15px;
 
         @media (max-width: 1000px) {
